<resources>
    <string name="app_name">Edu Online</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="title_activity_laucher">LaucherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="skip_tutorial">Tiếp theo</string>
    <string name="facebook_app_id">715988828787083</string>
    <string name="fb_login_protocol_scheme">fb715988828787083</string>
    <string name="login_by_fb">Facebook</string>
    <string name="login_by_gg">Google</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_enter_password">Xác nhận mật khẩu</string>
    <string name="forget_pass_login">Quên mật khẩu đăng nhập?</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="login_after">Đăng nhập sau</string>
    <string name="have_not_account">Chưa có tài khoản?</string>
    <string name="have_account">Đã có tài khoản?</string>

    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="full_name">Họ tên</string>
    <string name="error_input_email">Chưa nhập email</string>
    <string name="error_input_pass">Chưa nhập mật khẩu</string>
    <string name="loadding">Chờ tý...</string>
    <string name="password_invalid">Mật khẩu chưa khớp</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="notification">Thông báo</string>
    <string name="my_course">Khóa học của tôi</string>

    <string name="view_all_category">Xem tất cả</string>
    <string name="money_sample">
        <u>700.000 đ</u>
    </string>
    <string name="unit_money">Đ</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="internet_not_avaiable">Mạng không có sẵn</string>


</resources>
